<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <LinearLayout android:layout_width="match_parent"
                  android:orientation="horizontal"
                  android:id="@+id/id_ll_layout"
                  android:layout_height="wrap_content">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:gravity="center_vertical"
                  android:textColor="#000000"
                  android:paddingStart="12dp"
                  android:paddingEnd="12dp"
                  android:text="选择方式"/>

        <RadioGroup android:layout_width="match_parent"
                    android:id="@+id/id_rg"
                    android:padding="6dp"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

            <RadioButton android:layout_width="wrap_content"
                         android:text="@string/str_dialog"
                         android:id="@+id/id_rb_dialog"
                         android:checked="true"
                         android:layout_height="wrap_content"/>

            <RadioButton android:layout_width="wrap_content"
                         android:text="@string/str_water_mask"
                         android:id="@+id/id_rb_water"
                         android:layout_marginStart="24dp"
                         android:layout_height="wrap_content"/>

        </RadioGroup>

    </LinearLayout>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/id_ll_layout"
            android:id="@+id/id_btn_open"
            android:onClick="openBall"
            android:text="@string/str_open"/>

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="closeBall"
            android:id="@+id/id_btn_close"
            app:layout_constraintTop_toBottomOf="@id/id_btn_open"
            android:text="@string/id_btn_close"/>

    <TextView android:layout_width="match_parent"
              android:padding="12dp"
              app:layout_constraintTop_toBottomOf="@id/id_btn_close"
              android:text="@string/str_tip"
              android:layout_height="wrap_content"/>




</android.support.constraint.ConstraintLayout>