<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


    <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <RelativeLayout android:layout_width="wrap_content"
                        android:background="#aa000000"
                        android:layout_height="wrap_content">

            <TextView android:layout_width="wrap_content"
                      android:text="@string/str_province"
                      android:textColor="#FFF"
                      android:padding="12dp"
                      android:textStyle="bold"
                      android:id="@+id/id_tv_province"
                      android:layout_height="wrap_content"/>

            <TextView android:layout_width="wrap_content"
                      android:text="@string/str_number"
                      android:layout_toEndOf="@id/id_tv_province"
                      android:padding="12dp"
                      android:textColor="#651FFF"
                      android:id="@+id/id_tv_number"
                      android:layout_height="wrap_content"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_below="@id/id_tv_province"
                      android:layout_alignStart="@id/id_tv_province"
                      android:layout_alignEnd="@id/id_tv_number"
                      android:text="@string/str_time"
                      android:layout_marginBottom="8dp"
                      android:textColor="#FFF"
                      android:gravity="center"
                      android:layout_marginTop="4dp"
                      android:id="@+id/id_tv_date"
                      android:layout_height="wrap_content"/>

        </RelativeLayout>


    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>